--- a/reactversion/source/src/containers/App.css
+++ b/reactversion/source/src/containers/App.css
@@ -214,6 +214,7 @@
     background: radial-gradient(at bottom left, white,var(--c0), rgba(100,149,237,0.5), rgba(59,103,184,0.6));
     box-shadow: 2px 0 10px -5px black;
     animation: spinBall 0.3s cubic-bezier(.8, 0, .1, 2);
+    /* border: 2px solid var(--g0); */
 }
 
 #menuCategoryPortfolioPeinture{
@@ -562,6 +563,105 @@
     bottom: 86px;
 }
 
+/* waves */
+.wave{
+    display: block;
+    position: fixed;
+    top: 50%;
+    left:50%;
+    border-radius:100%;
+    border:1px solid white;
+    transition: opacity 0.3s ease;
+    opacity:0;
+    box-shadow: 0 0 10px rgba(0,0,100,0.35), 0 0 2px rgba(0,0,100,0.35) inset;
+    animation: waveWait 2s ease;
+}
+
+#wave0_0{
+    transform: translate(-128%,-185%);
+    height: 90px;
+    width:90px;
+    animation: wave0 3s infinite;
+}
+#wave0_1{
+    height: 110px;
+    width: 110px;
+    transform: translate(-114%, -161%);
+    opacity:0.6;
+    animation: wave1 3s infinite;
+    animation-delay: 3.5s;
+}
+#wave0_2{
+    height: 145px;
+    width: 145px;
+    transform: translate(-98%, -135%);
+    opacity:0.3;
+    animation: wave2 3s infinite;
+    animation-delay: 7s;
+}
+
+@keyframes wave0 {
+    0%{
+        opacity:0;
+        height:50px;
+        width:50px;
+        transform: translate(-168%,-255%);
+    }
+    50%{
+        opacity:0.6;
+        height:90px;
+        width:90px;
+        transform: translate(-128%,-185%);
+    }
+    100%{
+        opacity:0;
+        height:50px;
+        width:50px;
+        transform: translate(-168%,-255%);
+    }
+}
+
+@keyframes wave1 {
+    0%{
+        opacity:0;
+        height:90px;
+        width:90px;
+        transform: translate(-128%,-185%);
+    }
+    50%{
+        opacity:0.4;
+        height:110px;
+        width:110px;
+        transform: translate(-114%, -161%);
+    }
+    100%{
+        opacity:0;
+        height:90px;
+        width:90px;
+        transform: translate(-128%,-185%);
+    }
+}
+
+@keyframes wave2 {
+    0%{
+        opacity:0;
+        height:110px;
+        width:110px;
+        transform: translate(-114%, -161%);
+    }
+    50%{
+        opacity:0.1;
+        height:145px;
+        width:145px;
+        transform: translate(-98%, -135%);
+    }
+    100%{
+        opacity:0;
+        height:110px;
+        width:110px;
+        transform: translate(-114%, -161%);
+    }
+}
 
 @keyframes spinBall {
     0%{
@@ -576,6 +676,11 @@
 }
 
 @media screen and (max-width: 415px) {
+
+    .wave{
+        display:none;
+    }
+
     .menuInitial,
     .bioOn,
     .portfolioOn{
