--- a/reactversion/source/src/components/SubMenuContent/SubMenuEditeur.css
+++ b/reactversion/source/src/components/SubMenuContent/SubMenuEditeur.css
@@ -8,4 +8,94 @@
     overflow: auto;
     background: radial-gradient(at bottom right, transparent,transparent, rgb(210,200,200), rgb(190,180,180));
     cursor: default;
-} 
+}
+
+.backgroundFiddle{
+    display: block;
+    position: fixed;
+    top:0;
+    width:100%;
+    height:300px;
+    background: radial-gradient(at top, white, transparent, transparent);
+}
+
+.editeurControl{
+    width:100%;
+    margin:0 auto;
+    text-align:center;
+    top:0;
+    box-sizing: border-box;
+    padding-bottom:20px;
+    color: rgb(100,50,50);
+    font-family: 'Roboto', cursive;
+    position: fixed;
+    top:0;
+    z-index:1;
+    animation: editeurAppear 1s ease;
+}
+
+.editeurControl h1 {
+    font-family: 'Megrim', cursive;
+    color: tomato;
+}
+
+.editeurControl p {
+    width:100%;
+    box-sizing: border-box;
+    padding:10px;
+    margin-top:20px;
+    color: rgb(100,50,50);
+}
+
+.editeurControl p span {
+    font-size:0.83em;
+    font-weight:bold;
+}
+
+#editeurInput{
+    font-family: 'Roboto', cursive;
+    font-weight: bold;
+    font-size:1.2em;
+    color: rgba(100,50,50,.8);
+    width:100%;
+    max-width:210px;
+    max-height:80px;
+    border:none;
+    border-radius:2px;
+    padding:10px;
+    text-align:center;
+    box-shadow: 0 20px 40px -12px rgba(100,0,0,.35), 0px 6px 12px -3px rgba(100,0,0,.35)inset;
+    border: 1px solid white;
+    text-overflow: ellipsis;
+}
+
+.glyphLine{
+    position: relative;
+    margin:0 auto;
+    margin-top:270px;
+    width:100%;
+    max-width:241px;
+    text-align:center;
+    box-sizing: border-box;
+    padding:20px;
+    animation: editeurAppear 2s;
+}
+
+.glyphLine svg{
+    animation: none !important;
+    display:block;
+    position: absolute;
+    top:0;
+    left:50%;
+    transform: translateX(-50%);
+    box-shadow: 0 20px 40px -12px rgba(100,0,0,.35)!important;
+}
+
+@keyframes editeurAppear {
+    0%{
+        opacity:0;
+    }
+    100%{
+        opacity:1;
+    }
+}
