--- a/reactversion/source/src/components/SubMenuContent/SubMenuCle.css
+++ b/reactversion/source/src/components/SubMenuContent/SubMenuCle.css
@@ -1,6 +1,7 @@
 .cleOn {
-    display: block;
     position: fixed;
+    display: grid;
+    align-items:center;
     top: 0 !important;
     left: 0 !important;
     height: 100vh;
@@ -8,4 +9,159 @@
     overflow: auto;
     background: radial-gradient(at bottom right, transparent,transparent, rgb(210,200,200), rgb(190,180,180));
     cursor: default;
+}
+
+.cleContent{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    align-items: center;
+    justify-items:center;
+    margin:0 auto;
+    max-width:1000px;
+}
+
+.clePresentation {
+    display: block;
+    margin: 0 auto;
+    max-width:400px;
+    text-align:justify;
+    font-family: 'Roboto', cursive;
+    color: rgb(100,50,50);
+    font-size:1.2em;
+    box-sizing: border-box;
+    padding:10px;
+    animation: clePresentation 1s ease-in-out;
+}
+
+button.cleLink {
+    display: block;
+    margin-left:50%;
+    margin-top: 20px;
+    transform: translateX(-50%);
+    font-size:1.2em;
+    background: radial-gradient(at top, white, tomato);
+    border:none;
+    border-radius:3px;
+    color: rgb(100,50,50);
+    box-sizing: border-box;
+    padding:15px;
+    padding-left:25px;
+    padding-right:25px;
+    box-shadow: 0 10px 20px -6px rgba(100,0,0,.35);
+    cursor: pointer;
+    opacity:0.8;
+    transition: opacity 0.3s ease;
+}
+
+button.cleLink:hover {
+    opacity:1;
+}
+
+a {
+    text-decoration: none;
+}
+
+p.cleRed{
+    color: tomato;
+    font-weight:bold;
+}
+
+.fractalCle {
+    height:100%;
+}
+
+.fractalCle svg {
+    height:100% !important;
+    width:100% !important;
+    animation: clePresentation 1s ease-in-out !important;
+}
+
+@keyframes clePresentation {
+    0%{
+        opacity:0;
+    }
+    100%{
+        opacity: 1;
+    }
+}
+
+@media (max-width:850px) {
+    .cleOn {
+        display: block;
+    }
+    
+    .cleContent{
+        display: block;
+    }
+    .fractalCle {
+        height:400px;
+    }
+    
+}
+
+@media (max-width:670px) {
+    
+    .cleContent{
+        display: block;
+        margin-left:-50px;
+    }
+    .fractalCle {
+        height:300px;
+    }
+    
+}
+
+@media (max-width:500px) {
+    
+    .cleContent{
+        display: block;
+        width:300px;
+        margin-left:20px;
+    }
+    .fractalCle {
+        height:200px;
+    }
+    
+}
+
+@media (max-width:375px) {
+    
+    .cleContent{
+        display: block;
+        width:250px;
+        margin-left:20px;
+    }
+    .clePresentation p {
+        text-align:left;
+    }
+    .fractalCle {
+        height:200px;
+    }
+    button.cleLink{
+        width:180px;
+        margin-left:100px;
+        font-size:1em;
+        margin-bottom:93px;
+    }
+}
+
+@media (max-width:360px) {
+    
+    .cleContent{
+        display: block;
+        width:250px;
+        margin-left:20px;
+    }
+    .clePresentation p {
+        text-align:left;
+    }
+    .fractalCle {
+        height:200px;
+    }
+    button.cleLink{
+        width:180px;
+        margin-left:100px;
+        font-size:1em;
+        margin-bottom:93px;
+    }
 }
