--- a/reactversion/source/src/containers/App.css
+++ b/reactversion/source/src/containers/App.css
@@ -206,6 +206,11 @@
     animation: spinBall 0.3s cubic-bezier(.8, 0, .1, 2);
 }
 
+.fractalParcoursApres svg {
+    margin-top:10px !important;
+    width:70px !important;
+}
+
 /* PORFOLIO MENU CATEGORY */
 #menuCategoryPortfolioWeb{
     margin-top: 50%;
