--- a/reactversion/source2/src/components/Header/Header.css
+++ b/reactversion/source2/src/components/Header/Header.css
@@ -13,15 +13,16 @@
     text-align:left;
     width:100%;
     font-family: 'Megrim', cursive;
+    text-shadow: 0 2px 1px var(--blue0);
     font-size:1em;
-    color: rgb(0,0,100);
+    color: var(--blue4);
     opacity:0.75;
 }
 
 .siteTitle span {
     font-weight: bold;
     font-size: 2em;
-    color: rgb(30,30,80);
+    color: white;
 }
 
 .siteTitleShift{
@@ -35,7 +36,7 @@
     width:100%;
     font-family: 'Megrim', cursive;
     font-size:1em;
-    color: rgb(0,0,100);
+    color: var(--blue0);
 }
 
 .smallSiteTitle {
