--- a/reactversion/source2/src/containers/App.css
+++ b/reactversion/source2/src/containers/App.css
@@ -1,3 +1,23 @@
+:root{
+  --blue0: rgb(29, 55, 104);
+  --blue1: rgb(75, 106, 160);
+  --blue2: rgb(122, 161, 216);
+  --blue3: rgb(211, 227, 252);
+  --blue4: rgb(250, 254, 255);
+}
+
 .hidden {
   display: none;
+}
+
+.back {
+  height:100vh;
+  width:100vw;
+  position: fixed;
+  z-index:-1;
+  top:-4px;
+}
+
+.back img {
+  width:100vw;
 }
