--- a/reactversion/source2/src/index.css
+++ b/reactversion/source2/src/index.css
@@ -4,7 +4,7 @@ body {
   margin: 0px;
   padding: 0px;
   overflow-x: hidden;
-  background: rgb(220, 220, 234);
+  background: black;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
