--- a/reactversion/source2/src/components/Header/Header.css
+++ b/reactversion/source2/src/components/Header/Header.css
@@ -2,6 +2,7 @@
     background: transparent;
     height:70px;
     width:100vw;
+    z-index:10;
 }
 
 .siteTitle{
@@ -17,6 +18,7 @@
     font-size:1em;
     color: var(--blue4);
     opacity:0.75;
+    z-index:3;
 }
 
 .siteTitle span {
@@ -39,42 +41,12 @@
     color: var(--blue0);
 }
 
-.smallSiteTitle {
-    display: none;
-}
-
 @media (max-width:500px) {
     .siteTitle{
         display:none;
     }
-    .smallSiteTitle{
-        display: block;
-        position: fixed;
-        top:0;
-        left: 0;
-        transform: none;
-        height: 80px;
-        opacity: 0.45;
-    }
-    .samllSiteTitle div > svg {
-        width: 80px;
-        height: 80px;
-    }
-
 }
 
 @media (max-width: 360px) {
-    .smallSiteTitle {
-        top:50%;
-        left:50%;
-        transform: translate(-50%,-61.8%);
-        opacity:0.65;
-        height:300px;
-        width:300px;
-    }
-    .smallSiteTitle div > svg {
-        width: 300px !important;
-        height: 300px !important;
-        opacity: 0.35;
-    }
+
 }
