--- a/reactversion/source2/src/components/Header/SearchBar/SearchBar.css
+++ b/reactversion/source2/src/components/Header/SearchBar/SearchBar.css
@@ -4,6 +4,7 @@
     top:20px;;
     right:73px;
     height:30px;
+    z-index:10;
 }
 
 input.searchInput{
@@ -42,6 +43,7 @@ input.searchInput{
     height:25px;
     cursor: pointer;
     box-sizing: border-box;
+    z-index:100;
 }
 
 .results span {
