--- a/reactversion/source2/src/components/Modal/Modal.css
+++ b/reactversion/source2/src/components/Modal/Modal.css
@@ -4,9 +4,9 @@
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 15px;
     row-gap:5px;
-    top:100px;
+    top:50%;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translate(-50%, -50%);
     height:238px;
     width:250px;
     background: radial-gradient(var(--blue3), var(--blue1));
@@ -43,6 +43,7 @@
 .backState{
     display: block;
     position: fixed;
+    z-index:1;
     top:0;
     left: 0;
     width:100vw;
