--- a/reactversion/source2/src/components/Header/SearchBar/SearchBar.css
+++ b/reactversion/source2/src/components/Header/SearchBar/SearchBar.css
@@ -32,6 +32,7 @@ input.searchInput{
     box-shadow: 0 10px 20px -10px rgba(0,0,100,0.25);
     box-sizing: border-box;
     padding-left:20px;
+    overflow-x: hidden;
 }
 
 .tempSearch::-webkit-scrollbar-thumb{
