--- a/reactversion/source2/src/containers/css/Galerie.css
+++ b/reactversion/source2/src/containers/css/Galerie.css
@@ -97,6 +97,14 @@
     padding-bottom:10px;
 }
 
+@keyframes titleAppear {
+    0%{
+        opacity:0;
+    }
+    100%{
+        opacity:1;
+    }
+}
 
 @keyframes picShowArise{
     0%{
