--- a/reactversion/source2/src/containers/css/App.css
+++ b/reactversion/source2/src/containers/css/App.css
@@ -21,3 +21,11 @@
 .back img {
   width:100vw;
 }
+
+.temp{
+  margin: 0 auto;
+  width:100%;
+  text-align:center;
+  font-size:3em;
+  color:white;
+}
