--- a/reactversion/source2/src/components/Header/SearchBar/SearchBar.css
+++ b/reactversion/source2/src/components/Header/SearchBar/SearchBar.css
@@ -1,7 +1,7 @@
 .searchBar{
     position: fixed;
     display:block;
-    top:20px;;
+    top:20px;
     right:73px;
     height:30px;
     z-index:10;
