--- a/reactversion/source2/src/containers/css/App.css
+++ b/reactversion/source2/src/containers/css/App.css
@@ -29,3 +29,40 @@
   font-size:3em;
   color:white;
 }
+
+a.cleLink,
+a.touchWriterLink{
+  display: block;
+  position: fixed;
+  text-decoration: none;
+  right:15px;
+  height:50px;
+  width:50px;
+  display: grid;
+  align-items:center;
+  justify-items: center;
+  text-align: center; 
+  border-radius:100%;
+  font-size:0.6em;
+  font-family: 'Roboto', cursive;
+  font-weight:bold;
+  box-shadow: 0 5px 10px -5px rgba(19,55,104,.75);
+  transition: all 0.2s ease-in-out;
+}
+
+a.touchWriterLink{
+  color: var(--blue0);
+  top: 130px;
+  background: radial-gradient(at top, white, rgb(92, 189, 196));
+}
+
+a.cleLink{
+  color: var(--blue0);
+  top:190px;
+  background: radial-gradient(at top, white, var(--blue2));
+}
+
+a.touchWriterLink:hover,
+a.cleLink:hover{
+  transform: scale(1.1,1.1);
+}
